// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavigationTag /> renders with description 1`] = `
<div>
  <a
    className={undefined}
    href="#Pets"
    onClick={[Function]}
  >
    <span>
      Pets
    </span>
    <div
      className=""
    >
      <img
        alt=""
        src="test-file-stub"
        title="arrow"
      />
    </div>
    <div
      className=""
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Access to Pets</p>
        ",
        }
      }
    />
  </a>
  <div
    className=""
  />
</div>
`;

exports[`<NavigationTag /> renders with methods 1`] = `
<div>
  <a
    className={undefined}
    href="#pets"
    onClick={[Function]}
  >
    <span>
      pets
    </span>
    <div
      className=""
    >
      <img
        alt=""
        src="test-file-stub"
        title="arrow"
      />
    </div>
  </a>
  <div
    className="undefined"
  >
    <a
      className=""
      href="#pets"
    >
      <span
        className="get"
      >
        GET
      </span>
      <span
        className={undefined}
      >
        Get pets
      </span>
    </a>
    <a
      className=""
      href="#pets/:id"
    >
      <span
        className="get"
      >
        GET
      </span>
      <span
        className={undefined}
      >
        Get pets
      </span>
    </a>
  </div>
</div>
`;

exports[`<NavigationTag /> renders with minimum props 1`] = `
<div>
  <a
    className={undefined}
    href="#pets"
    onClick={[Function]}
  >
    <span>
      pets
    </span>
    <div
      className=""
    >
      <img
        alt=""
        src="test-file-stub"
        title="arrow"
      />
    </div>
  </a>
  <div
    className=""
  />
</div>
`;
